--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.16",
     "rewire": "^2.5.2",
     "supertest": "^6.2.3"
   }
